--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,7 @@
 
     <string name="sales">Sales</string>
     <string name="product_info">Product Info</string>
+    <string name="product_desc">Product Description</string>
     <string name="customer_total">Orders Total</string>
     <string name="info">Info</string>
     <string name="history">History</string>
@@ -72,6 +73,8 @@
     <string name="id">ID:</string>
     <string name="quantity">Quantity:</string>
     <string name="price">Price:</string>
+    <string name="sku">SKU:</string>
+    <string name="status">Status:</string>
     <string name="manufacturer">Manufacturer:</string>
     <string name="fullname">Fullname:</string>
     <string name="ip">IP:</string>
