--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -10,8 +10,8 @@
 
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
-    <string name="enable">Enable</string>
-    <string name="disable">Disable</string>
+    <string name="enable">Enabled</string>
+    <string name="disable">Disabled</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="warning">Warning</string>
@@ -98,7 +98,7 @@
 
     <string name="details_title" formatted="false">%s (ID:%s)</string>
 
-    <string-array name="StatusesLists" >
+    <string-array name="StatusesLists">
         <item>Missing Orders,0,#000000</item>
         <item>Pending,1,#2279ea</item>
         <item>Processing,2,#03b3da</item>
@@ -111,9 +111,9 @@
         <item>Refunded,11,#ef2d12</item>
         <item>Reversed,12,#d71135</item>
         <item>Chargeback,13,#86041c</item>
-        <item>Expired,14,#6b6b6b"</item>
+        <item>Expired,14,#6b6b6b\"</item>
         <item>Processed,15,#26b326</item>
-        <item>Voided,16,"#71716f</item>
+        <item>Voided,16,\"#71716f</item>
     </string-array>
 
 </resources>
