--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -51,8 +51,8 @@
     <string name="add_store">Adicionar Loja...</string>
 
     <string name="today">Hoje</string>
-    <string name="monthly">Mensal</string>
-    <string name="yearly">Anual</string>
+    <string name="monthly">Este Mês</string>
+    <string name="yearly">Este Ano</string>
 
     <string name="sales">Vendas</string>
     <string name="product_info">Informações do Produto</string>
@@ -62,6 +62,10 @@
     <string name="history">Histórico</string>
     <string name="notify_customer">Notificar Cliente</string>
     <string name="notification">Notificação</string>
+
+    <string name="start_date">Data de início</string>
+    <string name="finish_date">Data final</string>
+    <string name="date_range">Intervalo de datas</string>
 
     <string name="dashboard_details_1">Valor médio do pedido / dia:</string>
     <string name="dashboard_details_2">Média de pedidos / dia:</string>
