--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -51,8 +51,8 @@
     <string name="add_store">Mağaza Ekle..</string>
 
     <string name="today">Bugün</string>
-    <string name="monthly">Aylık</string>
-    <string name="yearly">Yıllık</string>
+    <string name="monthly">Bu Ay</string>
+    <string name="yearly">Bu Yıl</string>
 
     <string name="sales">Satışlar</string>
     <string name="product_info">Ürün Bilgisi</string>
@@ -62,6 +62,10 @@
     <string name="history">Geçmiş</string>
     <string name="notify_customer">Müşteriye Bildir</string>
     <string name="notification">Uyarı</string>
+
+    <string name="start_date">Başlangıç Tarihi</string>
+    <string name="finish_date">Bitiş Tarihi</string>
+    <string name="date_range">Tarih Aralığı</string>
 
     <string name="dashboard_details_1">Ort. sipariş tutarı / gün:</string>
     <string name="dashboard_details_2">Ort. sipariş / gün:</string>
