--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,8 +51,8 @@
     <string name="add_store">Add Store..</string>
 
     <string name="today">Today</string>
-    <string name="monthly">Monthly</string>
-    <string name="yearly">Yearly</string>
+    <string name="monthly">This Month</string>
+    <string name="yearly">This Year</string>
 
     <string name="sales">Sales</string>
     <string name="product_info">Product Info</string>
@@ -62,6 +62,10 @@
     <string name="history">History</string>
     <string name="notify_customer">Notify Customer</string>
     <string name="notification">Notification</string>
+
+    <string name="start_date">Starting Date</string>
+    <string name="finish_date">End Date</string>
+    <string name="date_range">Date Range</string>
 
     <string name="dashboard_details_1">Avg. order value / day:</string>
     <string name="dashboard_details_2">Avg. order / day:</string>
